--- a/src/app/components/sideMenu/customer-menu/customer-menu.component.html
+++ b/src/app/components/sideMenu/customer-menu/customer-menu.component.html
@@ -2,7 +2,7 @@
 <br>
 <div class="sideMenu">
     <ul>
-        <li class=line1> <button class="menu-btn" [routerLink]="['', { outlets: { middle: ['getAllCoupons']}}]">Get All Coupons</button></li>
+        <li class=line1> <button class="menu-btn" [routerLink]="['', { outlets: { middle: ['getAllAvailableCoupons']}}]">Get All Coupons</button></li>
 
  
 <li class=line1> <button class="menu-btn" [routerLink]="['', { outlets: { middle: ['getAllCustomerCoupons']}}]">My Coupons</button></li>
