--- a/src/app/components/middleDesk/adminMenu/get-all-companies/get-all-companies.component.html
+++ b/src/app/components/middleDesk/adminMenu/get-all-companies/get-all-companies.component.html
@@ -6,6 +6,7 @@
             <th>ID</th>
             <th>Name</th>
             <th>Email</th>
+            <th>Password</th>
             <th>UID</th>
             <th>Options</th>
         </tr>
@@ -15,11 +16,12 @@
             <td>{{company.id}}</td>
             <td>{{company.name}}</td>
             <td>{{company.email}}</td>
+            <td>{{company.password}}</td>
             <td>{{company.uid}}</td>
             <td>
                 <button>Update</button>
                 <button>Details</button>
-                <button (onclick) = "deleteCompany(company.id)">Delete</button>
+                <button (click) = "deleteCompany(company.id)">Delete</button>
             </td>
 
         </tr>
