--- a/src/app/components/middleDesk/adminMenu/get-all-customers/get-all-customers.component.html
+++ b/src/app/components/middleDesk/adminMenu/get-all-customers/get-all-customers.component.html
@@ -1,1 +1,31 @@
-<p>get-all-customers works!</p>
+<h1>All customers</h1>
+
+<table class=table>
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+            <th>Password</th>
+            <th>UID</th>
+            <th>Options</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let customer of customers">
+            <td>{{customer.id}}</td>
+            <td>{{customer.firstName}}</td>
+            <td>{{customer.lastName}}</td>
+            <td>{{customer.email}}</td>
+            <td>{{customer.password}}</td>
+            <td>{{customer.uid}}</td>
+            <td>
+                <button>Update</button>
+                <button>Details</button>
+                <button (click) = "deleteCustomer(customer.id)">Delete</button>
+            </td>
+
+        </tr>
+    </tbody>
+</table>
