--- a/src/app/components/middleDesk/companyMenu/add-coupon/add-coupon.component.html
+++ b/src/app/components/middleDesk/companyMenu/add-coupon/add-coupon.component.html
@@ -1,1 +1,18 @@
-<p>add-coupon works!</p>
+<h1>Add Coupon</h1><br>
+
+<input type="text" required minlength="1" [(ngModel)]="coupon.title" placeholder="Title">
+<input type="text" required [(ngModel)]="coupon.description" placeholder="Description">
+<input type="date" required [(ngModel)]="coupon.startDate" placeholder="Start Date">
+<input type="date" required min = "{{coupon.startDate}}" [(ngModel)]="coupon.endDate" placeholder="End Date">
+<input type="number" required min = "0" [(ngModel)]="coupon.amount" placeholder="Amount">
+<input type="number" required min = "0" [(ngModel)]="coupon.price" placeholder="Price">
+<input type="text" [(ngModel)]="coupon.image" placeholder="Image">
+<select class="dropdownlist" required [(ngModel)]="coupon.category">
+    <option [ngValue]="undefined"  disabled selected>Category</option>
+    <option value="Food">Food</option>
+    <option value="Electricity">Electricity</option>
+    <option value="Restaurant">Restaurant</option>
+    <option value="Vacation">Vacation</option>
+</select><br>
+<button (click)="addCoupon()">Submit</button>
+<button (click)="clear()">Clear</button>
