--- a/src/app/components/middleDesk/adminMenu/get-all-companies/get-all-companies.component.html
+++ b/src/app/components/middleDesk/adminMenu/get-all-companies/get-all-companies.component.html
@@ -29,7 +29,7 @@
             <td>{{company.password}}</td>
             <td>{{company.uid}}</td>
             <td>
-                <button>Update</button>
+                <button (click)="updateCompany(company.id)">Update</button>
 
                 <button (click)="companyInfo(company.id)">Details</button>
                 <button (click)="deleteCompany(company.id)">Delete</button>
