--- a/src/app/components/sideMenu/company-menu/company-menu.component.html
+++ b/src/app/components/sideMenu/company-menu/company-menu.component.html
@@ -10,7 +10,7 @@
                 Coupons</button></li>
 
 
-<li class=line1> <button class="menu-btn" [routerLink]="['', { outlets: { middle: ['updateCompany']}}]">View and change company details
+<li class=line1> <button class="menu-btn" [routerLink]="['', { outlets: { middle: ['updateCompanyCommon',id]}}]">View and change company details
                 </button></li>
 
     </ul>
