--- a/src/app/components/sideMenu/customer-menu/customer-menu.component.html
+++ b/src/app/components/sideMenu/customer-menu/customer-menu.component.html
@@ -9,7 +9,7 @@
 
 
 
-<li class=line1> <button class="menu-btn" [routerLink]="['', { outlets: { middle: ['updateCustomer']}}]">View and change user details
+<li class=line1> <button class="menu-btn" [routerLink]="['', { outlets: { middle: ['updateCustomerCommon',id]}}]">View and change user details
                 </button></li>
 
     </ul>
