--- a/src/styles.css
+++ b/src/styles.css
@@ -29,6 +29,11 @@ html,body{
     font-weight: bold;
     text-decoration:none;
 }
+table {
+    margin-left: auto;
+    margin-right: auto;
+}
 th,td {
     border: 1px solid chartreuse;
   }
+  
