--- a/src/app/components/middle-desk/middle-desk.component.html
+++ b/src/app/components/middle-desk/middle-desk.component.html
@@ -1,7 +1,7 @@
 <!-- <app-home></app-home> -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press+Start+2P|Gotu|Smokum">
 <div class="">
     <router-outlet name="middle"></router-outlet>
-    
-    
-</div>
 
+
+</div>
