--- a/src/app/components/middleDesk/customerMenu/get-all-customer-coupons/get-all-customer-coupons.component.html
+++ b/src/app/components/middleDesk/customerMenu/get-all-customer-coupons/get-all-customer-coupons.component.html
@@ -1,15 +1,15 @@
 <h1>All avaliable coupons</h1>
 <h2>Search by</h2>
 <input type="number" min="0" [(ngModel)]="price" placeholder="Price"><br>
-<select class="dropdownlist"  [(ngModel)]="category">
+<select class="dropdownlist" [(ngModel)]="category">
     <option [ngValue]="undefined"  disabled selected>Category</option>
     <option value="Food">Food</option>
     <option value="Electricity">Electricity</option>
     <option value="Restaurant">Restaurant</option>
     <option value="Vacation">Vacation</option>
 </select><br>
-<button (click)="findCoupons()">Find</button>
-<button (click)="clear()">Clear</button>
+<button class="outer-btn-add" (click)="findCoupons()">Find</button>
+<button class="outer-btn-clr" (click)="clear()">Clear</button>
 
 <table class=table>
     <thead>
