--- a/src/app/components/middleDesk/update-coupon-common/update-coupon-common.component.html
+++ b/src/app/components/middleDesk/update-coupon-common/update-coupon-common.component.html
@@ -12,8 +12,8 @@
             <th>Price</th>
             <th>Category</th>
             <th>UID</th>
-            
-            
+
+
         </tr>
     </thead>
     <tbody>
@@ -27,7 +27,7 @@
             <td>{{coupon.price}}</td>
             <td>{{coupon.category}}</td>
             <td>{{coupon.uid}}</td>
-             
+
 
         </tr>
     </tbody>
@@ -36,19 +36,19 @@
 <br>
 <h2>What do you want to change?</h2>
 <br>
-<input type="text"  minlength="1" [(ngModel)]="ucoupon.title" placeholder="Title">
-<input type="text"  [(ngModel)]="ucoupon.description" placeholder="Description">
-<input type="date"  [(ngModel)]="ucoupon.startDate" placeholder="Start Date">
-<input type="date"  min = "{{ucoupon.startDate}}" [(ngModel)]="ucoupon.endDate" placeholder="End Date">
-<input type="number"  min = "0" [(ngModel)]="ucoupon.amount" placeholder="Amount">
-<input type="number"  min = "0" [(ngModel)]="ucoupon.price" placeholder="Price">
+<input type="text" minlength="1" [(ngModel)]="ucoupon.title" placeholder="Title">
+<input type="text" [(ngModel)]="ucoupon.description" placeholder="Description">
+<input type="date" [(ngModel)]="ucoupon.startDate" placeholder="Start Date">
+<input type="date" min="{{ucoupon.startDate}}" [(ngModel)]="ucoupon.endDate" placeholder="End Date">
+<input type="number" min="0" [(ngModel)]="ucoupon.amount" placeholder="Amount">
+<input type="number" min="0" [(ngModel)]="ucoupon.price" placeholder="Price">
 <input type="text" [(ngModel)]="ucoupon.image" placeholder="Image">
-<select class="dropdownlist"  [(ngModel)]="ucoupon.category">
+<select class="dropdownlist" [(ngModel)]="ucoupon.category">
     <option [ngValue]="undefined"  disabled selected>Category</option>
     <option value="Food">Food</option>
     <option value="Electricity">Electricity</option>
     <option value="Restaurant">Restaurant</option>
     <option value="Vacation">Vacation</option>
 </select><br>
-<button (click)="updateCoupon()">Submit</button>
-<button (click)="clear()">Clear</button>
+<button class="outer-btn-add" (click)="updateCoupon()">Submit</button>
+<button class="outer-btn-clr" (click)="clear()">Clear</button>
