--- a/src/app/components/sideMenu/login/login.component.css
+++ b/src/app/components/sideMenu/login/login.component.css
@@ -1,4 +1,4 @@
-.lgn-btn{
+.lgn-btn {
     font-size: 20px;
     border: 2px solid black;
     border-radius: 8px;
@@ -8,24 +8,38 @@
     text-align: center;
     -webkit-transition-duration: 0.4s;
     transition-duration: 0.4s;
+    outline: none;
 }
+
 .lgn-btn:hover {
     background-color: brown;
     color: white;
     border: none;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
 .square {
     height: 200px;
     width: 190px;
-    background-color:darkorange;
+    background-color: darkorange;
     position: absolute;
     margin-left: -1ex;
-  }
-.dropdownlist{
+}
+
+#dropdown {
     font-size: 20px;
     border: 2px solid black;
     border-radius: 8px;
     background-color: white;
     padding: 10px 15px;
+    outline: none;
+    color: black;
+}
+
+input {
+    background-color: wheat;
+    margin: auto;
+    color: black;
+    padding: 5px 10px;
+    border-color: white;
 }
