--- a/src/app/components/middleDesk/adminMenu/add-customer/add-customer.component.html
+++ b/src/app/components/middleDesk/adminMenu/add-customer/add-customer.component.html
@@ -1,9 +1,13 @@
-<h1>Add Customer</h1><br>
+<div class="menu">
+    <h1>Add Customer</h1><br>
 
-<input type="text" [(ngModel)]="customer.firstName" placeholder="First Name">
-<input type="text" [(ngModel)]="customer.lastName" placeholder="Last Name">
-<input type="email" [(ngModel)]="customer.email" placeholder="Email">
-<input type="password" [(ngModel)]="customer.password" placeholder="Password">
-<input type="password" [(ngModel)]="rpassword" placeholder="Repeat Password"><br>
-<button class="outer-btn-add" (click)="addCustomer()">Submit</button>
-<button class="outer-btn-clr" (click)="clear()">Clear</button>
+    <div class="innerMenu">
+        <input type="text" [(ngModel)]="customer.firstName" placeholder="First Name">
+        <input type="text" [(ngModel)]="customer.lastName" placeholder="Last Name">
+        <input type="email" [(ngModel)]="customer.email" placeholder="Email">
+        <input type="password" [(ngModel)]="customer.password" placeholder="Password">
+        <input type="password" [(ngModel)]="rpassword" placeholder="Repeat Password"><br>
+        <button class="outer-btn-add" (click)="addCustomer()">Submit</button>
+        <button class="outer-btn-clr" (click)="clear()">Clear</button>
+    </div>
+</div>
