--- a/src/app/components/middleDesk/customerMenu/get-all-customer-coupons/get-all-customer-coupons.component.html
+++ b/src/app/components/middleDesk/customerMenu/get-all-customer-coupons/get-all-customer-coupons.component.html
@@ -1,6 +1,6 @@
 <h1>All avaliable coupons</h1>
 <h2>Search by</h2>
-<input type="number" min="0" [(ngModel)]="price" placeholder="Price"><br>
+<input type="number" min="0" [(ngModel)]="price" placeholder="Price">
 <select class="dropdownlist" [(ngModel)]="category">
     <option [ngValue]="undefined"  disabled selected>Category</option>
     <option value="Food">Food</option>
