--- a/src/app/components/middleDesk/update-company-common/update-company-common.component.html
+++ b/src/app/components/middleDesk/update-company-common/update-company-common.component.html
@@ -25,14 +25,17 @@
         </tr>
     </tbody>
 </table>
-<br>
-<br>
 
-<h2>What do you want to change?</h2>
-<br>
-<input type="text" [(ngModel)]="ucompany.name" placeholder="Company Name">
-<input type="email" [(ngModel)]="ucompany.email" placeholder="Email">
-<input type="password" [(ngModel)]="ucompany.password" placeholder="Password">
-<input type="password" [(ngModel)]="rpassword" placeholder="Repeat Password"><br>
-<button class="outer-btn-add" (click)="updateCompany()">Submit</button>
-<button class="outer-btn-clr" (click)="clear()">Clear</button>
+
+<div class="menu">
+    <h2>What do you want to change?</h2>
+    <br>
+    <div class="innerMenu">
+        <input type="text" [(ngModel)]="ucompany.name" placeholder="Company Name">
+        <input type="email" [(ngModel)]="ucompany.email" placeholder="Email">
+        <input type="password" [(ngModel)]="ucompany.password" placeholder="Password">
+        <input type="password" [(ngModel)]="rpassword" placeholder="Repeat Password"><br>
+        <button class="outer-btn-add" (click)="updateCompany()">Submit</button>
+        <button class="outer-btn-clr" (click)="clear()">Clear</button>
+    </div>
+</div>
