--- a/src/app/components/middleDesk/update-coupon-common/update-coupon-common.component.html
+++ b/src/app/components/middleDesk/update-coupon-common/update-coupon-common.component.html
@@ -32,23 +32,26 @@
         </tr>
     </tbody>
 </table>
-<br>
-<br>
-<h2>What do you want to change?</h2>
-<br>
-<input type="text" minlength="1" [(ngModel)]="ucoupon.title" placeholder="Title">
-<input type="text" [(ngModel)]="ucoupon.description" placeholder="Description">
-<input type="date" [(ngModel)]="ucoupon.startDate" placeholder="Start Date">
-<input type="date" min="{{ucoupon.startDate}}" [(ngModel)]="ucoupon.endDate" placeholder="End Date">
-<input type="number" min="0" [(ngModel)]="ucoupon.amount" placeholder="Amount">
-<input type="number" min="0" [(ngModel)]="ucoupon.price" placeholder="Price">
-<input type="text" [(ngModel)]="ucoupon.image" placeholder="Image">
-<select class="dropdownlist" [(ngModel)]="ucoupon.category">
-    <option [ngValue]="undefined"  disabled selected>Category</option>
-    <option value="Food">Food</option>
-    <option value="Electricity">Electricity</option>
-    <option value="Restaurant">Restaurant</option>
-    <option value="Vacation">Vacation</option>
-</select><br>
-<button class="outer-btn-add" (click)="updateCoupon()">Submit</button>
-<button class="outer-btn-clr" (click)="clear()">Clear</button>
+
+<div class="menu">
+    <h2>What do you want to change?</h2>
+    <br>
+    <div class="innerMenu">
+        <input type="text" minlength="1" [(ngModel)]="ucoupon.title" placeholder="Title">
+        <input type="text" [(ngModel)]="ucoupon.description" placeholder="Description">Start Date
+        <input class="input" type="date" [(ngModel)]="ucoupon.startDate">End Date
+        <input class="input" type="date" min="{{ucoupon.startDate}}" [(ngModel)]="ucoupon.endDate">
+        <input type="number" min="0" [(ngModel)]="ucoupon.amount" placeholder="Amount">
+        <input type="number" min="0" [(ngModel)]="ucoupon.price" placeholder="Price">
+        <input type="text" [(ngModel)]="ucoupon.image" placeholder="Image">
+        <select class="dropdownlist" [(ngModel)]="ucoupon.category">
+            <option [ngValue]="undefined"  disabled selected>Category</option>
+            <option value="Food">Food</option>
+            <option value="Electricity">Electricity</option>
+            <option value="Restaurant">Restaurant</option>
+            <option value="Vacation">Vacation</option>
+        </select><br>
+        <button class="outer-btn-add" (click)="updateCoupon()">Submit</button>
+        <button class="outer-btn-clr" (click)="clear()">Clear</button>
+    </div>
+</div>
